--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
+    "date-fns": "^3.6.0",
     "gatsby": "^5.13.5",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-styled-components": "^6.13.1",
+    "gatsby-source-contentful": "^8.13.2",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-source-shopify": "^8.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "shopify-buy": "^2.22.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^2.1.0",
     "prettier": "^2.8.8"
   },
   "keywords": [
